p spacing, cap letter fix

--- a/css/theme/src/_variables.scss
+++ b/css/theme/src/_variables.scss
@@ -26,7 +26,7 @@ $heading-font-weight: 700 !default;
 $heading-margin-top: 0 !default;
 $heading-margin-bottom: .5em !default;
 $paragraph-margin-top: 0 !default;
-$paragraph-margin-bottom: $space-2 !default;
+$paragraph-margin-bottom: $space-1 !default;
 
 $body-color: #000 !default;
 $body-background-color: #fff !default;
